--- a/app/views/scrape/index.html.erb
+++ b/app/views/scrape/index.html.erb
@@ -18,8 +18,8 @@
 
   <article class="main-content">
     <td>
-      <%= link_to "Fabio", :controller => "scrape", :action => "results", :person=> "Fabio" %>
-      <%= link_to "TSwift", :controller => "scrape", :action => "results", :person=> "Taylor Swift" %>
+      <h2><%= link_to "Fabio", :controller => "scrape", :action => "results", :person=> "Fabio" %></h2>
+      <h2><%= link_to "TSwift", :controller => "scrape", :action => "results", :person=> "Taylor Swift" %></h2>
     </td>
   </article>
 </section>
